change page name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://faesalzher.github.io/birthday-dewi",
-  "name": "dewi-birthday",
+  "name": "material-kit-react",
   "author": "Devias IO",
   "licence": "MIT",
   "version": "2.1.1",
