--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "next lint",
     "lint-fix": "next lint --fix",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dev"
   },
   "dependencies": {
     "@emotion/cache": "11.10.3",
